Fixed: Layout issues in post.php, edit.php and other files due to over large signature input field.

--- a/forum/styles/Default/style.css
+++ b/forum/styles/Default/style.css
@@ -886,8 +886,12 @@ a {
     width: 190px;
 }
 
-.signature_content {
+.edit_signature_content {
     width: 550px;
+}
+
+.signature_content {
+    width: 480px;
 }
 
 .link_hidden {
